--- a/.gitignore
+++ b/.gitignore
@@ -171,3 +171,17 @@
 
 # Android studio 3.1+ serialized cache file
 **/.idea/caches/build_file_checksums.ser
+
+######
+#maven
+**/target/
+**/pom.xml.tag
+**/pom.xml.releaseBackup
+**/pom.xml.versionsBackup
+**/pom.xml.next
+**/release.properties
+**/dependency-reduced-pom.xml
+**/buildNumber.properties
+**/.mvn/timing.properties
+# https://github.com/takari/maven-wrapper#usage-without-binary-jar
+**/.mvn/wrapper/maven-wrapper.jar
