Added hotkeys and emoji's to the chaD?

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -26,7 +26,11 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/vanilla-emoji-picker/dist/emojiPicker.min.js",
+              "src/assets/js/first_js_script.js",
+            ]
           },
           "configurations": {
             "production": {
