--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,9 +19,11 @@
     "@angular/platform-browser": "~9.1.1",
     "@angular/platform-browser-dynamic": "~9.1.1",
     "@angular/router": "~9.1.1",
+    "jquery": "^3.5.0",
     "ng2-canvas-whiteboard": "^3.1.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
+    "vanilla-emoji-picker": "^0.2.4",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
