Enabled routing for project

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -119,10 +119,6 @@
           }
         }
       }
-    }
-  },
-  "defaultProject": "frontend",
-  "cli": {
-    "analytics": false
-  }
+    }},
+  "defaultProject": "frontend"
 }
