--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,8 @@
     "jquery": "^3.5.0",
     "ng2-canvas-whiteboard": "^3.1.1",
     "rxjs": "~6.5.4",
+    "sockjs-client": "^1.4.0",
+    "stompjs": "^2.3.3",
     "tslib": "^1.10.0",
     "vanilla-emoji-picker": "^0.2.4",
     "zone.js": "~0.10.2"
