--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
     "@angular/platform-browser": "~9.1.1",
     "@angular/platform-browser-dynamic": "~9.1.1",
     "@angular/router": "~9.1.1",
-    "jquery": "^3.5.0",
+    "jquery": "^3.5.1",
+    "net": "^1.0.2",
     "ng2-canvas-whiteboard": "^3.1.1",
     "rxjs": "~6.5.4",
     "sockjs-client": "^1.4.0",
